[package]
name = "humus"
version = "0.1.0"
edition = "2021"

[dependencies]
basic_trie = "2.0"
log = "0.4"
parking_lot = "0.12"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
uuid = {  version = "1.10.0", features = ["v4", "fast-rng"] }
warp = "0.3"
