[package]
name = "humus"
description = "A composting database. This is a small experiment in deliberate data decaay: A simple in-memory database that slowly forgets the things that you don't revisit."
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/timcowlishaw/humus"
readme = "README.md"
keywords = ["database", "permacomputing", "compost", "decay", "experimental"]
categories = ["database-implementations", "games"]

[dependencies]
basic_trie = "2.0"
log = "0.4"
parking_lot = "0.12"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
uuid = {  version = "1.10.0", features = ["v4", "fast-rng"] }
warp = "0.3"
